force-app/main/default/objects/sugati__Supplier_Contract__c/sugati__Supplier_Contract__c.object-meta.xml
<CustomObject>
    <label>Supplier Contract</label>
    <nameField>
        <displayFormat>SCon-{0000000}</displayFormat>
        <label>Supplier Contract Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>