force-app/main/default/objects/sugati__Supplier_Contract__c/fields/sugati__S_C_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Contract_Name__c</fullName>
    <label>Contract Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>