force-app/main/default/objects/sugati__Supplier_Contract__c/fields/sugati__S_C_Contract_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Contract_Stage__c</fullName>
    <label>Contract Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Out Of Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>