force-app/main/default/objects/sugati__Supplier_Contract__c/fields/sugati__S_C_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_End_Date__c</fullName>
    <description>When Does the Contract End?</description>
    <inlineHelpText>When Does the Contract End?</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>