force-app/main/default/objects/sugati__Supplier_Contract__c/fields/sugati__S_C_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Supplier is the contract with?</description>
    <inlineHelpText>Which Supplier is the contract with?</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>