force-app/main/default/objects/sugati__Supplier_Contract__c/fields/sugati__S_C_Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the main contact from the supplier you are working with?</description>
    <inlineHelpText>Who is the main contact from the supplier you are working with?</inlineHelpText>
    <label>Supplier Contact</label>
    <referenceTo>sugati__Supplier_Contact__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>